syntax = "proto3";
option csharp_namespace = "nadena.dev.ndmf.proto";

package nadena.dev.ndmf.proto;

import "proto/base_types.proto";
import "proto/asset.proto";
import "proto/component.proto";

import "google/protobuf/any.proto";

message ExportRoot {
  repeated Asset assets = 1;
  GameObject root = 2;
  repeated VersionInfo versions = 3;
}

message VersionInfo {
  string package_name = 1;
  string version = 2;
}

message GameObject {
  string name = 1;
  ObjectID id = 2;
  Transform local_transform = 3;
  bool enabled = 4;
  
  repeated Component components = 10;
  repeated GameObject children = 11;
}

message Component {
  bool enabled = 1;
  ObjectID id = 2;

  google.protobuf.Any component = 3;
}
